@@ -1,3 +1,11 @@
+2004-08-01 Baptiste Lepilleur <gaiacrtn@free.fr>
+
+  * include/cppunit/XmlOutputter.h:
+  * include/cppunit/tools/XmlDocument.h
+  * src/cppunit/XmlDocument.cpp:
+  * src/cppunit/XmlOutputter.cpp: integrated patch #997006 from Akos Maroy. 
+    This patch makes the 'standalone' attribute in XML header optional.
+
 2004-06-25 Baptiste Lepilleur <gaiacrtn@free.fr>
 
   * include/cppunit/Portability.h: moved OStringStream alias definition to
